--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -21,7 +21,7 @@
       />
       <a
         class="textShadow qm"
-        href="https://github.com/phil1436"
+        href="https://github.com/phil1436/DevCv"
         target="_blank"
         style="
           font-size: 50px;
