--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -22,11 +22,8 @@
   }
 }
 
-.horizontal {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
+.contentBtn {
+  width: 200px;
 }
 
 .colorBtn {
