--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Ubuntu", sans-serif;
+  background-color: #f5f5f5;
 }
 * {
   margin: 0;
@@ -62,6 +63,19 @@ h2 {
 .pageSplitter {
   display: flex;
   flex-direction: row;
+}
+
+.horizontal {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.vertical {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 [data-theme="green-light"] {
