--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -65,7 +65,7 @@
   </div>
   <div *ngIf="!completeClose">
     <div style="right: 50px; bottom: 50px">
-      <a href="https://github.com/phil1436" class="textShadow" target="_blank">
+      <a href="https://philipp-bonin.com/" class="textShadow" target="_blank">
         by Philipp B.
       </a>
     </div>
