--- a/src/app/search-bar/search-bar.component.scss
+++ b/src/app/search-bar/search-bar.component.scss
@@ -118,6 +118,26 @@
   animation: shake 0.2s linear;
 }
 
+.user {
+  background-color: var(--primary);
+  padding: 10px;
+  margin: 5px;
+  border-radius: 20px;
+  opacity: 0.7;
+  cursor: pointer;
+  color: white;
+  font-size: 20px;
+  &:hover {
+    opacity: 1;
+  }
+}
+
+.user-box {
+  overflow-x: scroll;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
 @keyframes rotate {
   from {
     transform: rotate(0deg);
