--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -35,7 +35,8 @@
             'Skills',
             'Jobs',
             'Education',
-            'Other'
+            'Other',
+            'OtherLeft'
           ]
         "
         (click)="editContent = name"
